--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,12 @@
     "require": {
         "php": ">=5.3.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "4.0.*"
+    },
     "autoload": {
-        "psr-0": {
-            "SlashCommand": "src/"
+        "psr-4": {
+            "Vultuk\\SlashCommand\\": "src"
         }
     }
 }
